Enhance code (fix comments)